<resources>
    <string name="app_name">WhatsOnInInput</string>
    <string name="app_short_name">WOIInput</string>

    <string name="prompt_web">Web</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_city">City</string>
    <string name="prompt_area_category">Area Category</string>
    <string name="prompt_area_name">Area Name</string>
    <string name="prompt_category">Category</string>
    <string name="prompt_ip_address">IP Address</string>
    <string name="prompt_ip">192.168.0.1</string>
    <string name="prompt_konfirmasi">Konfirmasi</string>
    <string name="prompt_pengaturan_konfirmasi">Apakah anda yakin untuk melakukan perubahan?</string>
    <string name="prompt_setuju">Setuju</string>
    <string name="prompt_batal">Batal</string>
    <string name="prompt_tidak">Tidak</string>
    <string name="prompt_perhatian">Perhatian</string>
    <string name="prompt_pengaturan_prekondisi">Silahkan beralih ke pengaturan</string>
    <string name="prompt_district">District</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="prompt_blockNumber">Block Number</string>
    <string name="prompt_floor">Floor</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_init_camera">Field name harus diisi terlebih dahulu</string>
    <string name="prompt_please_wait">Please wait</string>
    <string name="prompt_progress_dialog">Progress Dialog</string>
    <string name="prompt_sending">Sending</string>
    <string name="prompt_retrieving">Retrieving</string>
    <string name="prompt_pemberitahuan">Pemberitahuan</string>
    <string name="prompt_upload_in_progress">Upload gambar sedang berjalan. Silahkan tunggu sampai selesai.</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_type">Type</string>

    <string name="action_next">Lanjut</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_upload">Upload</string>
    <string name="action_add">Tambah</string>
    <string name="action_send">Kirim</string>
    <string name="action_edit">Ubah</string>
    <string name="action_change_ip">Ubah IP</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_upload">UploadActivity</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string-array name="TypeArr">
        <item>indoor</item>
        <item>outdoor</item>
    </string-array>
</resources>
